--- a/TuneHub/package.json
+++ b/TuneHub/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.15",
     "@angular/cdk": "^19.2.19",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
@@ -20,7 +21,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/platform-server": "^19.2.0",
-    "@angular/router": "^19.2.0",
+    "@angular/router": "^19.2.15",
     "@angular/ssr": "^19.2.8",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
