--- a/TuneHub/package.json
+++ b/TuneHub/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.15",
     "@angular/ssr": "^19.2.8",
+    "@stomp/stompjs": "^7.2.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -35,6 +37,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
