--- a/TuneHub/tsconfig.app.json
+++ b/TuneHub/tsconfig.app.json
@@ -4,9 +4,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": [
-      "node"
-    ]
+    "types": ["node"]
   },
   "files": [
     "src/main.ts",
@@ -17,3 +15,4 @@
     "src/**/*.d.ts"
   ]
 }
+
